Needs to be virtual (from sr's comments) Implement the assign method with an "=" operator Bug 151628 r=ccarlen sr=jst